base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crispyfish-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: crispyfish-demo
  template:
    spec:
      containers:
      - image: crispyfish-demo:latest
        imagePullPolicy: IfNotPresent
        name: crispyfish-demo
